# matrix

./: .gitignore  CMakeLists.txt  Interfaces.hpp  Matrix.cpp  Matrix.hpp  MatrixHelperFunctions.hpp  StaticPoly.hpp  Vec.hpp  Vector.cpp  Vector.hpp  VectorHelperFunctions.hpp  main.cpp
cmake/: Conan.cmake
